resolved primary layout problems

--- a/HTMLproject1/css/assets-style.css
+++ b/HTMLproject1/css/assets-style.css
@@ -69,7 +69,7 @@ p {
     padding-right: 20px;
     justify-content: center; /*For centering text inside .photo...*/
     align-items: center;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0,.5);
 }
 
 .photo-overlay {
@@ -84,7 +84,7 @@ p {
     justify-content: center; /*For centering text inside .photo...*/
     /*align-items: center;
     Not clear why this isn't working now. It was fine earlier...*/
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,.5);
 }
 
 .first-H3 {
@@ -100,7 +100,7 @@ p {
 
 .poster-overlay,
 .photo-overlay {
-    opacity: 1;
+    opacity: 0;
     transition: opacity .1s;
     border-radius: 10px;
     cursor: pointer;
